HV-1882 Move sigtest to a separate stage and run it with JDK 8
We cannot run the sigtest when running Maven with JDK 17,
so we have to twist the rules and exceptionally run this with JDK 8...